fix: alignment

--- a/main.css
+++ b/main.css
@@ -310,7 +310,7 @@ body{
 
 .overviewLowerContainer{
     display: flex;
-    /* justify-content: space-between; */
+    justify-content: space-between;
     /* flex-wrap: wrap; */
     gap: 20px;
 }
